# cftgu

./: README.md
assembler/: .gitignore  pyproject.toml
assembler/src/cftgu_assembler/: cli.py
compiler/: CMakeLists.txt  Makefile
compiler/src/: cgu_cmp.cpp  spec.h
compiler/src/file/: file.cpp  file.h
compiler/src/generate/: bin.cpp  bin.h
compiler/src/parser/: parser.cpp  parser.h
compiler/src/token/: token.cpp  token.h
emulator/: CMakeLists.txt  Makefile
emulator/src/: cgu_emu.cpp  spec.h  test.cpp
emulator/src/core/: core.cpp  core.h
guide/: package-lock.json  package.json
guide/src/: index.js
guide/src/components/: Bulma.js  Footer.js  Layout.js  Navbar.js
guide/src/components/context/: ThemeContext.js
guide/src/pages/: Home.js  NotFound.js  home.css
isa/: 01-intro.md
programs/testing/: simple_add.cgu
